Fixed spacing for inputs in firefox

--- a/packages/augur-simplified/src/modules/common/inputs.styles.less
+++ b/packages/augur-simplified/src/modules/common/inputs.styles.less
@@ -95,9 +95,10 @@
   margin-top: @size-14;
   background-color: var(--simple-light-bg);
   border-radius: @size-8;
-  display: flex;
-  height: @size-50;
-  min-height: @size-50;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  height: @size-56;
+  min-height: @size-56;
   border: @size-1 solid transparent;
   outline: 0;
   color: var(--simple-secondary-text);
@@ -117,10 +118,8 @@
     border: 0;
     outline: 0;
     flex: 1;
-    padding: @size-16 @size-12;
+    padding: @size-14 0;
     margin-right: @size-8;
-    padding-right: 0;
-    padding-left: 0;
 
     &:focus {
       border: 0;
